[refactor] make exceptions more readable