@@ -4,12 +4,9 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -21,21 +18,27 @@ public class GlobalExceptionHandler {
   public final ResponseEntity<Map<String, List<String>>> handleGeneralExceptions(Exception ex) {
     List<String> errors = Collections.singletonList(ex.getMessage());
 
-    return new ResponseEntity<>(errorsMap(errors), new HttpHeaders(), HttpStatus.INTERNAL_SERVER_ERROR);
+    return ResponseEntity
+        .status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .body(errorsMap(errors));
   }
 
   @ExceptionHandler(RuntimeException.class)
   public final ResponseEntity<Map<String, List<String>>> handleRuntimeExceptions(RuntimeException ex) {
     List<String> errors = Collections.singletonList(ex.getMessage());
 
-    return new ResponseEntity<>(errorsMap(errors), new HttpHeaders(), HttpStatus.INTERNAL_SERVER_ERROR);
+    return ResponseEntity
+        .status(HttpStatus.INTERNAL_SERVER_ERROR)
+        .body(errorsMap(errors));
   }
 
   @ExceptionHandler(NotFoundException.class)
   public ResponseEntity<Map<String, List<String>>> handleNotFoundException(NotFoundException ex) {
     List<String> errors = Collections.singletonList(ex.getMessage());
 
-    return new ResponseEntity<>(errorsMap(errors), new HttpHeaders(), HttpStatus.NOT_FOUND);
+    return ResponseEntity
+        .status(HttpStatus.NOT_FOUND)
+        .body(errorsMap(errors));
   }
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -44,10 +47,11 @@ public class GlobalExceptionHandler {
     List<String> errors = ex.getBindingResult()
         .getFieldErrors()
         .stream()
-        .map(FieldError::getDefaultMessage)
-        .collect(Collectors.toList());
+        .map(error -> error.getDefaultMessage())
+        .toList();
 
-    return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+    return ResponseEntity
+        .status(HttpStatus.BAD_REQUEST)
         .body(errorsMap(errors));
   }
 
